--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="aboutme.html">About Me</a></li>
         <li><a href="myworks.html">My Works</a></li>
         <li><a href="contactme.html">Contact Me</a></li>
